[tool.poetry]
name = "shvatka"
version = "1.0.0"
description = "Bot and Api for popular night puzzle hunt"
authors = ["Yuriy Chebyshev <bomzheg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
shvatka-tgbot = 'shvatka.tgbot.__main__:run'
shvatka-api = 'shvatka.api.__main__:run'

[tool.poetry.dependencies]
python = "~3.11"
wheel = "^0.38.4"
pyyaml = "^6.0"
python-dateutil = "^2.8.2"
colorlog = "^6.7.0"
aiogram = "^3.0.0b7"
aiogram_dialog = "2.0.0b17"
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
alembic = "^1.10.0"
asyncpg = "^0.27.0"
ujson = "^5.5.0"
redis = "^4.2.0"
pyrogram = "^2.0.57"
dataclass_factory = "^2.16"
apscheduler = "^3.9.1"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
telegraph = {extras = ["aio"], version = "^2.2.0"}
openpyxl = "^3.0.10"
lxml = "^4.9.2"
matplotlib = "^3.7.1"
mypy = "^1.1.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
aiogram_dialog = {extras = ["tools"],version = "^2.0.0b12"}
black = {version = "^22.12.0", extras = ["d"]}
locust = "^2.15.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
flake8-pyproject = "1.2.2"
pytest = "^7.2.0"
pytest-ordering = "^0.6"
pytest-asyncio = "^0.18.3"
testcontainers = {extras = ["postgresql"], version = "^3.7.0"}
mockito = "^1.4.0"
httpx = "^0.23.0"
coverage = {extras = ["toml"], version = "^7.2.1"}
black = {version = "^22.12.0"}
ruff = "^0.0.263"
types-python-dateutil = "^2.8.19"
types-redis = "^4.3.21"
types-PyYAML = "^6.0.12"
lxml-stubs = "^0.4.0"
mypy = "^1.1.1"
aiogram-tests = {git = "https://github.com/bomzheg/aiogram_tests.git", branch = "master"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    ".*",
    "*/site-packages/*",
    "shvatka/tgbot/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 99
target-version = ['py310', 'py311']
include_trailing_comma = true
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
  | .idea
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99

[tool.ruff]
line-length = 99

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.flake8]
ignore = ['E203', 'E231', 'E241', 'W503']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 99
max-complexity = 10
count = true
statistics = true
exit-zero = true

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["union-attr", "arg-type"]

[[tool.mypy.overrides]]
module = "shvatka.tgbot.*"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "shvatka.infrastructure.crawler.*"
disable_error_code = ["union-attr", "arg-type", "index", "misc", "assignment"]
