[project]
name = "shvatka"
version = "1.0.0"
description = "Bot and Api for popular night puzzle hunt"
authors = [
    {name = "Yuriy Chebyshev", email = "bomzheg@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyyaml>=6.0,<7.0",
    "python-dateutil>=2.8.2,<3.0",
    "colorlog>=6.7.0,<7.0",
    "aiogram>=3.10.0,<3.11.0",
    "pydantic>=2.5,<3.0",
    "aiogram_dialog[tools]>=2.1,<2.2",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.10.0,<2.0",
    "asyncpg>=0.27.0,<1.0",
    "ujson>=5.5.0,<6.0",
    "redis>=5.0.1,<6.0",
    "pyrogram>=2.0.57,<3.0",
    "dataclass_factory>=2.16,<3.0",
    "adaptix==3.0.0b8",
    "apscheduler>=3.9.1,<4.0",
    "fastapi==0.111.1",
    "uvicorn>=0.30.0,<0.31.0",
    "python-multipart>=0.0.5,<0.1.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib>=1.7.4,<2.0",
    "bcrypt==4.0.1",
    "telegraph[aio]>=2.2.0,<3.0",
    "openpyxl>=3.0.10,<4.0",
    "lxml>=4.9.2,<5.0",
    "matplotlib>=3.7.1,<4.0",
    "greenlet<3.0.0",
    "dishka==1.2.0",
    "asgi-monitor>=0.4.0,<0.5.0",
]

[project.optional-dependencies]
dev = [
    "locust>=2.15.1,<3",
]
test = [
    "pytest>=7.2.0,<8.0",
    "pytest-ordering>=0.6,<0.7",
    "pytest-asyncio>=0.18.3,<0.19",
    "pytest-cov",
    "testcontainers>=4.5.1,<5.0",
    "httpx>=0.23.0,<0.24.0",
    "coverage[toml]",
    "ruff>=0.2.1,<0.3",
    "types-python-dateutil>=2.8.19,<3.0",
    "types-redis>=4.3.21,<5.0",
    "types-PyYAML>=6.0.12,<7.0",
    "lxml-stubs>=0.4.0,<0.5",
    "types-openpyxl",
    "types-python-jose",
    "types-passlib",
    "mypy>=1.1.1,<2.0",
    "aiogram-tests @ git+https://github.com/bomzheg/aiogram_tests.git@fix/aiogram3rc",
    "asgi-lifespan>=2.1.0,<3.0",
]

[project.scripts]
shvatka-tgbot = "shvatka.tgbot.__main__:run"
shvatka-api = "shvbatka.api.__main__:run"
shvatka-file-id-updater = "shvatka.infrastructure.file_id_updater:run"
shvatka-password = "shvatka.api.password_hash:generate"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shvatka"]

[tool.coverage.run]
branch = true
relative_files = true
include = ["shvatka/**"]
omit = [
    ".*",
    "*/site-packages/*",
    "shvatka/tgbot/*",
    "shvatka/infrastructure/db/migrations/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "(typing\\.)?assert_never",
]

[tool.black]
line-length = 99
target-version = ['py310', 'py311']
include_trailing_comma = true
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
  | .idea
)
'''

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "RUF001", "S101", "D", "ANN101", "S311", "PD008", "UP035", "C408", "C417",
    "ANN102", "EM101", "TRY003", "PIE790", "RET505", "A003",  "EM102", "RUF003",
    "RET503", "RET502", "ARG005", "TCH003", "RUF002", "SIM108", "UP024", "ISC001",
    "FA102", "RUF015", "FIX002", "TD002", "TD003", "TD004", "TD005", "FA100",


    # fixme
    "ANN201", "SIM300", "COM812", "I001", "PLR0913", "UP015", "UP015", "B905",
    "RUF007", "ANN401", "ANN001", "PLR0911", "FBT001", "ANN002", "ANN003",
    "ARG002", "ARG001", "ANN204", "BLE001", "TRY400", "TCH001", "TCH002",
    "PGH003", "FBT002", "N818", "PLW2901", "RET504", "PLC1901", "RUF006",
    "FBT003", "SIM102", "S106", "PLR2004", "DTZ007", "ANN206", "PGH004",
    "TRY301", "ANN202", "SIM114",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = [
    "SLF001", "PLR2004", "PLR0913", "PT004", "PT023", "PT001",
    "PLR0915", "ARG001", "PTH123"  # fixme
]
"tests/**/conftest.py" = ["F811"]
"shvatka/api/*" = ["B008"]
"**/migrations/versions/*" = ["N999"]
"**/crawler/**parser/*" = ["PLR0912", "B904"]
"shvatka/infrastructure/db/models/*" = ["RUF012"]

[tool.mypy]
no_implicit_optional = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["union-attr", "arg-type"]

[[tool.mypy.overrides]]
module = "shvatka.infrastructure.di.*"
disable_error_code = ["call-overload"]

[[tool.mypy.overrides]]
module = "shvatka.tgbot.*"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "shvatka.infrastructure.crawler.*"
disable_error_code = ["union-attr", "arg-type", "index", "misc", "assignment"]

[[tool.mypy.overrides]]
module = ["telegraph.*", "matplotlib.*", "aiogram_tests.*", "apscheduler.*", "testcontainers.*"]
ignore_missing_imports = true
